feature: edit receipt

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -64,7 +64,7 @@
                             </h3>
                         </div>
                     <div class="col-auto ml-auto">
-                        <a class="btn btn-success" href="/records/:id">edit</a>
+                        <a class="btn btn-success" href="/records/{{ this._id }}/edit">edit</a>
                         <form action="/records/{{ this._id }}?_method=DELETE" method="POST" style="display: inline;"> 
                             <button class="btn btn-danger" type="submit">delete</button>
                         </form>
