feature: show / create/ edit login user related receipt only

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,7 +18,7 @@
             <div class="container">
                 <a class="navbar-brand" href="/">
                     <i class="fas fa-file-invoice-dollar fa-lg"></i>&nbsp;
-                    {{#if isAuthenticated}}'s{{else}}家庭{{/if}}記事本
+                        家庭記事本
                     </a>
                 {{#if isAuthenticated}}
                     <a href="/users/logout" class="btn btn-outline-light">Logout</a>
