--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,13 +3,13 @@
 <div class="container dropdown-bar">
     <div class="row">
         <div class="col">
-            <h2>XXX's Receipts</h2>
+            <h2>{{loginUser.name}}s Receipts</h2>
         </div>
     </div>
     <div class="row">
         <div class="col btn-group">
             <button type="button" class="btn btn-info btn-block dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="categoryDropdown">
-                Please choise the category below
+                Please choose from the following category.
             </button>
             <div class="dropdown-menu">
                 <a class="dropdown-item" href="/">全部</a>
