--- a/views/login.hbs
+++ b/views/login.hbs
@@ -17,8 +17,7 @@
                 </div>
                 <div>
                     <button type="submit" class="btn btn-primary btn-block mx-1">Login</button>
-                    <a href="#" class="btn btn-info btn-block">Facebook Login</a>   
-                    {{!-- <a href="/auth/facebook" class="btn btn-info btn-block mx-1">Facebook Login</a> --}}
+                    <a href="/auth/facebook" class="btn btn-info btn-block mx-1">Facebook Login</a>
                 </div>
             </div>
             </form>
