--- a/views/register.hbs
+++ b/views/register.hbs
@@ -22,7 +22,7 @@
                 </div>
                 <div>
                     <button type="submit" class="btn btn-primary btn-block">Register</button>               
-                    {{!-- <a href="/auth/facebook" class="btn btn-info btn-block">Facebook Login</a> --}}
+                    <a href="/auth/facebook" class="btn btn-info btn-block">Regiser by Facebook</a>
                 </div>
             </form>
             <p class="lead my-4">
