--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
 <div class="container dropdown-bar">
     <div class="row">
         <div class="col">
-            <h2>{{loginUser.name}}s Receipts</h2>
+            <h2>{{loginUser.name}}'s Receipts</h2>
         </div>
     </div>
     <div class="row">
@@ -60,7 +60,7 @@
                         </div>
                         <div class="col-4 col-sm-2">
                             <h3 style="display: inline;">
-                                {{ this.amount }}
+                                NT${{ this.amount }}
                             </h3>
                         </div>
                     <div class="col-auto ml-auto">
